Fix clipping of the effects if obj is on top

--- a/public/css/maps.css
+++ b/public/css/maps.css
@@ -47,7 +47,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    overflow: visible;
     background-color: #f0f0f0; /* Optional: Add a background color */
 	transform: scale(1);
 	
